--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <option value="india">India</option>
             <option value="germany">Germany</option>
             <option value="england">England</option>
-            <option value="england">Africa</option>
+            <option value="england">Russia</option>
             <option value="england">China</option>
             <option value="england">Australia</option>
             <option value="england">America</option>
@@ -37,7 +37,7 @@
     <label for="checkbox">
     <input type="checkbox" name="checkbox" id="checkbox"/>
     <p>Payment Address is the same as the Delivery Address</p></label> 
-    <button>Pay 15.99 $</button>
+    <button>Pay Now $</button>
     </form>
 </div> <script src="script.js"></script>
 </body>
