--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     <form action="/">
     <label for="country">Country
         <select name="country" id="country">
-            <option value="india">India</option>
-            <option value="germany">Germany</option>
+            <option value="India">India</option>
+            <option value="Germany">Germany</option>
             <option value="england">England</option>
-            <option value="england">Russia</option>
-            <option value="england">China</option>
-            <option value="england">Australia</option>
-            <option value="england">America</option>
+            <option value="Russia">Russia</option>
+            <option value="China">China</option>
+            <option value="Australia">Australia</option>
+            <option value="America">America</option>
         </select>
     </label>
     <label for="cardno">Card Number
